--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <img src="bot.png" alt="" id="botImg">
     <div id="greetBot">Hello...</div>
     <div id="botText">
-      Meet Health Buddy
+      Health_Genie 💊
     </div>
   </div>
 </body>
