--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
   <div id="bot">
     <img src="bot.png" alt="" id="botImg">
     <div id="greetBot">Hello...</div>
-    <div id="botText">
-      Health_Genie 💊
-    </div>
+ <div id="botText">
+  <a href="https://healthgenieai.vercel.app/">Health_Genie 💊</a>
+</div>
+
+
   </div>
 </body>
 
