--- a/Health_Genie_AI/index.html
+++ b/Health_Genie_AI/index.html
@@ -25,7 +25,7 @@
             height: 600px; */
             padding: 30px;
             width: 800px;
-            height: 800px;
+            height: 850px;
             border: 1px solid #ccc;
             border-radius: 10px;
             display: flex;
@@ -179,6 +179,7 @@
             } catch (error) {
                 console.error('Error:', error);
                 // Handle errors gracefully, e.g., display an error message to the user
+                // to be prob here
             }
         }
 
